Added: verify email after register
