# routes/api.php
@@ -8,23 +8,24 @@ use App\Http\Controllers\UserController;
 
 Route::group(['middleware' => 'api'], function() {
     Route::post('/register', [UserController::class, 'register']);
-    Route::post('login', [UserController::class, 'login']);
+    Route::post('/login', [UserController::class, 'login']);
     Route::post('/logout', [UserController::class, 'logout']);
     Route::get('/profile', [UserController::class, 'profile']);
+    //Route::get('verifyemail/{token}', [UserController::class, 'verifyEmail']);
 
     Route::post('forgotpassword', [ForgotPasswordController::class, 'forgotPassword']);
     Route::post('resetpassword', [ForgotPasswordController::class, 'resetPassword']);
 
-    Route::post('createnote', [NoteController::class, 'createNote']);
-    Route::get('readnote', [NoteController::class, 'readAllNotes']);
-    Route::post('editnote', [NoteController::class, 'editNote']);
-    Route::post('deletenote', [NoteController::class, 'deleteNote']);
+    Route::post('note', [NoteController::class, 'createNote']);
+    Route::get('note', [NoteController::class, 'readAllNotes']);
+    Route::put('note', [NoteController::class, 'editNote']);
+    Route::delete('note', [NoteController::class, 'deleteNote']);
 
-    Route::post('createlabel', [LabelController::class, 'createLabel']);
-    Route::get('readlabel', [LabelController::class, 'readAllLabel']);
-    Route::post('updatelabel', [LabelController::class, 'updateLabel']);
-    Route::post('deletelabel', [LabelController::class, 'deleteLabel']);
-    Route::post('addnotelabel', [LabelController::class, 'addNoteLabel']);
-    Route::post('/deletenotelabel', [LabelController::class, 'deleteNoteLabel']);
+    Route::post('label', [LabelController::class, 'createLabel']);
+    Route::get('label', [LabelController::class, 'readAllLabel']);
+    Route::put('label', [LabelController::class, 'updateLabel']);
+    Route::delete('label', [LabelController::class, 'deleteLabel']);
+    Route::post('notelabel', [LabelController::class, 'addNoteLabel']);
+    Route::delete('notelabel', [LabelController::class, 'deleteNoteLabel']);
 
 });
